Updateded author information

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: CAW 
 Theme URI: TK
 Description: Web site design for the Coalition on the Academic Workforce by Pam Roller.  
-Author: Pam Roller
+Author: Pam Roller with full credit to Automatic
 Author URI: TK
 Version: 0.01
 License: GNU General Public License
