--- a/style.css
+++ b/style.css
@@ -178,7 +178,10 @@ ul#slider{
 	margin-right: auto;
 }
 
-
+article{
+	margin: 0px;
+	padding: 0px;
+}
 
 
 /* Typography
@@ -186,16 +189,16 @@ ul#slider{
 
 p{
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: .85em;
+	font-size: 14px;
 	line-height: 1.5em;
 	color: #333333;
-	margin: 20px 15px;
+	margin: 20px 20px 0px 10px;
 }
 
 a{
 	text-decoration: none;
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 1em;
+	font-size: 14px;
 	color: #336666;
 }
 
@@ -205,16 +208,14 @@ h1{
 	color: #669933;
 }
 
-h1.entry-title a{
-	margin: 1em 1em 0em 1em;
-	font-family: Times, serif;
-	color: #669933;
-}
 
-h1.entry-title a{
-	margin: 1em 1em 0em 1em;
+
+h1.entry-title a, h1.entry-title {
+	margin: 20px 20px 0px 10px;
 	font-family: Times, serif;
 	color: #669933;
+	font-size: 30px;
+	padding: 0px;
 }
 
 h1.widget-title{
@@ -222,6 +223,24 @@ h1.widget-title{
 	font-size: 1em;
 	line-height: 1.25em;
 	color: #CC6600;
+}
+
+h1.page-title{
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 0.85em;
+	line-height: 1.25em;
+	color: #999999;
+	margin: 20px 20px 0px 10px;
+}
+
+div.entry-meta, footer.entry-meta{
+	margin: 20px 20px 0px 20px;
+	font-size: 0.85em;
+	margin-bottom: 1px solid black;
+}
+
+div #site-generator{
+	margin-left: 40px;
 }
 
 
@@ -518,8 +537,12 @@ img.alignright {
 	margin: 0;
 }
 
-img.attachment-sm-post-thumb.wp-post-img {
-	border: 1px solid blue;
+p.sidebar a img {
+	border: 1px solid #B2B083;
+	padding: 5px;
+	margin-right: 15px;
+	display: block;
+	margin-top: 25px;
 }
 
 
